addons/mail/static/src/components/chatter/chatter.scss
// ------------------------------------------------------------------
// Layout
// ------------------------------------------------------------------

.o_Chatter {
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
    overflow: auto;
}

.o_Chatter_composer {
    border-bottom: $border-width solid;

    &.o-bordered {
        border-left: $border-width solid;
        border-right: $border-width solid;
    }
}

// ------------------------------------------------------------------
// Style
// ------------------------------------------------------------------

.o_Chatter {
    background-color: white;
    border-color: $border-color;
}

.o_Chatter_composer {
    border-bottom-color: $border-color;

    &.o-bordered {
        border-left-color: $border-color;
        border-right-color: $border-color;
    }
}

